--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -5,9 +5,9 @@
 }
 
 .header {
-    background: red;
-    width: 100%;
+    background: #fff;
     position: fixed;
+    width: 100%;
     padding: 0 10px;
     display: flex;
     justify-content: space-between;
